--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chart.js</title>
+    <title>Leaflet.js</title>
+    <!--<title>Chart.js</title>-->
 </head>
 <body>
-    <!--<h1>Chart.js is fun</h1>-->
-    
-    <canvas id="myChart"></canvas>
-    <script src="/assets/app.bundle.js"></script>
+    <div id="mapid"></div>
 
+    <!--<h1>Chart.js is fun</h1>-->
+    <!--<canvas id="myChart"></canvas>-->
+
+    <script src="/assets/app.bundle.js"></script>
 </body>
 </html>
