working with WebPack - basic app

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Leaflet.js</title>
-    <!--<title>Chart.js</title>-->
+    <title>Big Trees</title>
 </head>
 <body>
     <div id="mapid"></div>
-
-    <!--<h1>Chart.js is fun</h1>-->
-    <!--<canvas id="myChart"></canvas>-->
 
     <script src="/assets/app.bundle.js"></script>
 </body>
