chicken changes chlorpeth working

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Big Trees</title>
+    <title>Chickens!</title>
 </head>
 <body>
     <div id="mapid"></div>
