--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 
 <head>
+    <title>Sweden Chicken Stats</title>
     <meta charset="UTF-8">
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <meta name="description" content="Chicken production stats Sweden 2005 and 2016">
 </head>
 
 <body>
-    <div id="mapid" class="row content"></div>
+    <main>
+        <div id="mapid"></div>
+    </main>
 </body>
 
 </html>
